

2006/10/11: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added functions GWEN_NetLayerPackets_GetFixedPacketSize() and
  GWEN_NetLayerPackets_SetFixedPacketSize(): This allows the packets netlayer
  determine on its own how many bytes have to be read for a complete packet
  -> this constitutes an API enhancement
- src/gwenhywfar.c: initialize binreloc only once, decreased verbosity


2006-10-10  Christian Stimming  <stimming@tuhh.de>

	* src/gwenhywfar.c, src/binreloc.[hc]: Add initial binreloc
	support; all directories except plugindir (!) are now looked up
	automatically at runtime.


2006/10/02: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- decreased verbosity of netlayer and OS functions


===========================================================================
MARK: released gwenhywfar-2.4.1 (2006/09/26)
===========================================================================

2006/09/28: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a bug in netlayer: Was not resetting "inStatusChangeFn"
- decreased verbosity in nl_ssl.c


2006/09/25: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- fixed a possible memory leak in netlayer code


2006/09/20: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- nl_packets: Don't start sending data unless the next lower layer is
  connected
- decreased verbosity in src/os/directory_all.c
- decreased verbosity in src/parser/xml.c and src/base/plugindescr.c


2006/09/19: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- decreased loglevel of some messages in gct-tool
- function GWEN_NetLayerSsl_GenerateCertAndKeyFile() now always
  sets permissions so that only the creating user will be able to
  access the resulting file


2006/09/15: Martin Preuss<martin@libchipcard.de>